# wormhole-android

./: Makefile  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dumadudus/wormhole/: MainActivity.kt
docker/: Dockerfile
lib/: main.dart
lib/navigation/: back_pop_context.dart
lib/pages/: connecting_page.dart  qr_scanner_page.dart  send_page.dart  type_helpers.dart
lib/pages/settings/: server_settings_page.dart  settings_page.dart
lib/pages/toasts/: my_toast.dart
lib/pages/transfer_widgets/: transfer_code.dart  transfer_error.dart  transfer_finished.dart  transfer_progress.dart  transfer_zip_progress.dart
lib/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/rust/wormhole/types/: build_info.dart  error_types.dart  events.dart  t_update.dart  value.dart  value.freezed.dart
lib/transfer/: transfer_receiver.dart
lib/utils/: device.dart  log.dart  paths.dart
linux/: rust.cmake
native/: Cargo.toml
native/src/wormhole/: handler.rs  receive.rs  send.rs
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/wormhole/: handler.rs  helpers.rs  log.rs  mod.rs  receive.rs  send.rs  zip.rs
rust/src/wormhole/andrdoid/: log.rs  mod.rs
