[package]
name = "wormhole-rs"
version = "1.1.4"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.71"
flutter_rust_bridge = "=2.9.0"
magic-wormhole = "0.7.5"
futures = "0.3.31"
async-std = "1.13.1"
url = { version = "2.3.1", features = ["serde"] }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
macros = { path = "macros", version = "1" }
fastrand = "2.3.0"

[profile.release]
opt-level = 3       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[patch.crates-io]
time = {git = "https://github.com/time-rs/time", tag = "v0.3.35"}
